--- a/board/am116_core/project_example/project_keil5/example_am116_core.uvprojx
+++ b/board/am116_core/project_example/project_keil5/example_am116_core.uvprojx
@@ -373,7 +373,7 @@
               <MiscControls></MiscControls>
               <Define>AM_VDEBUG AM_CORTEX_M0</Define>
               <Undefine></Undefine>
-              <IncludePath>..\user_code;..\user_config;..\user_config/am_hwconf_usrcfg;..\user_config/am_servconf_usrcfg;..\..\..\..\3rdparty/CMSIS/Include;..\..\..\..\arch/arm/include;..\..\..\..\board/bsp_common/include;..\..\..\..\components/drivers/include;..\..\..\..\components/libc/armlib_adapter/include;..\..\..\..\components/libc/microlib_adapter/include;..\..\..\..\components/service/include;..\..\..\..\components/util/include;..\..\..\..\examples/board/am116_core;..\..\..\..\examples/components;..\..\..\..\examples/soc/zlg;..\..\..\..\examples/std;..\..\..\..\interface;..\..\..\..\soc/zlg/zlg116;..\..\..\..\soc/zlg/drivers/include/adc;..\..\..\..\soc/zlg/drivers/include/bkp;..\..\..\..\soc/zlg/drivers/include/clk;..\..\..\..\soc/zlg/drivers/include/cmp;..\..\..\..\soc/zlg/drivers/include/crc;..\..\..\..\soc/zlg/drivers/include/dac;..\..\..\..\soc/zlg/drivers/include/dma;..\..\..\..\soc/zlg/drivers/include/exti;..\..\..\..\soc/zlg/drivers/include/flash;..\..\..\..\soc/zlg/drivers/include/gpio;..\..\..\..\soc/zlg/drivers/include/i2c;..\..\..\..\soc/zlg/drivers/include/pwr;..\..\..\..\soc/zlg/drivers/include/rcc;..\..\..\..\soc/zlg/drivers/include/spi;..\..\..\..\soc/zlg/drivers/include/syscfg;..\..\..\..\soc/zlg/drivers/include/tim;..\..\..\..\soc/zlg/drivers/include/uart;..\..\..\..\soc/zlg/drivers/include/wdt</IncludePath>
+              <IncludePath>..\user_code;..\user_config;..\user_config/am_hwconf_usrcfg;..\user_config/am_servconf_usrcfg;..\..\..\..\3rdparty/CMSIS/Include;..\..\..\..\arch/arm/include;..\..\..\..\board/bsp_common/include;..\..\..\..\components/drivers/include;..\..\..\..\components/libc/armlib_adapter/include;..\..\..\..\components/libc/microlib_adapter/include;..\..\..\..\components/service/include;..\..\..\..\components/util/include;..\..\..\..\examples/board/am116_core;..\..\..\..\examples/components;..\..\..\..\examples/soc/zlg;..\..\..\..\examples/std;..\..\..\..\interface;..\..\..\..\soc/zlg/zlg116;..\..\..\..\soc/zlg/drivers/include/adc;..\..\..\..\soc/zlg/drivers/include/bkp;..\..\..\..\soc/zlg/drivers/include/clk;..\..\..\..\soc/zlg/drivers/include/cmp;..\..\..\..\soc/zlg/drivers/include/crc;..\..\..\..\soc/zlg/drivers/include/dac;..\..\..\..\soc/zlg/drivers/include/dma;..\..\..\..\soc/zlg/drivers/include/exti;..\..\..\..\soc/zlg/drivers/include/flash;..\..\..\..\soc/zlg/drivers/include/gpio;..\..\..\..\soc/zlg/drivers/include/i2c;..\..\..\..\soc/zlg/drivers/include/pwr;..\..\..\..\soc/zlg/drivers/include/rcc;..\..\..\..\soc/zlg/drivers/include/spi;..\..\..\..\soc/zlg/drivers/include/syscfg;..\..\..\..\soc/zlg/drivers/include/tim;..\..\..\..\soc/zlg/drivers/include/uart;..\..\..\..\soc/zlg/drivers/include/wdt;..\..\..\..\components\drivers\include;..\user_config\am_hwconf_usrcfg;..\..\..\..\components\drivers\include;..\user_config\am_hwconf_usrcfg;..\..\..\..\components\drivers\include;..\..\..\..\components\drivers\include;..\user_config\am_hwconf_usrcfg;..\..\..\..\components\drivers\include;..\user_config\am_hwconf_usrcfg;..\..\..\..\components\drivers\include</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -640,6 +640,31 @@
               <FileName>am_fm175xx_zlg116.lib</FileName>
               <FileType>4</FileType>
               <FilePath>..\..\..\..\components\drivers\source\fm175xx\am_fm175xx_zlg116.lib</FilePath>
+            </File>
+            <File>
+              <FileName>am_ltr_553als_01.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\components\drivers\source\ltr553als01\am_ltr_553als_01.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_bmg160.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\components\drivers\source\bmg160\am_bmg160.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_mmc5883ma.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\components\drivers\source\mmc5883ma\am_mmc5883ma.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_lsm6dsl.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\components\drivers\source\lsm6dsl\am_lsm6dsl.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_sc16is740.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\components\drivers\source\sc16is740\am_sc16is740.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -1381,6 +1406,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\am116_core\delay\demo_am116_core_std_delay.c</FilePath>
             </File>
+            <File>
+              <FileName>demo_am116_core_microport_sc16is740.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am116_core\microport_board\demo_am116_core_microport_sc16is740.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1425,6 +1455,26 @@
               <FileName>demo_fm175xx_picca_lpcd_read_id.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\components\drivers\demo_fm175xx_picca_lpcd_read_id.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_ltr_553als_01.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\components\drivers\demo_ltr_553als_01.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_bmg160.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\components\drivers\demo_bmg160.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_mmc5883ma.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\components\drivers\demo_mmc5883ma.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_lsm6dsl.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\components\drivers\demo_lsm6dsl.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -1970,6 +2020,31 @@
               <FileName>am_hwconf_fm175xx.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_fm175xx.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_ltr_553als.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_ltr_553als.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_bmg160.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_bmg160.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_mmc5883ma.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_mmc5883ma.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_lsm6dsl.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_lsm6dsl.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_microport_sc16is740.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_microport_sc16is740.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2610,6 +2685,31 @@
               <FileType>4</FileType>
               <FilePath>..\..\..\..\components\drivers\source\fm175xx\am_fm175xx_zlg116.lib</FilePath>
             </File>
+            <File>
+              <FileName>am_ltr_553als_01.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\components\drivers\source\ltr553als01\am_ltr_553als_01.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_bmg160.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\components\drivers\source\bmg160\am_bmg160.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_mmc5883ma.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\components\drivers\source\mmc5883ma\am_mmc5883ma.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_lsm6dsl.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\components\drivers\source\lsm6dsl\am_lsm6dsl.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_sc16is740.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\components\drivers\source\sc16is740\am_sc16is740.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -3350,6 +3450,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\am116_core\delay\demo_am116_core_std_delay.c</FilePath>
             </File>
+            <File>
+              <FileName>demo_am116_core_microport_sc16is740.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am116_core\microport_board\demo_am116_core_microport_sc16is740.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -3394,6 +3499,26 @@
               <FileName>demo_fm175xx_picca_lpcd_read_id.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\components\drivers\demo_fm175xx_picca_lpcd_read_id.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_ltr_553als_01.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\components\drivers\demo_ltr_553als_01.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_bmg160.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\components\drivers\demo_bmg160.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_mmc5883ma.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\components\drivers\demo_mmc5883ma.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_lsm6dsl.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\components\drivers\demo_lsm6dsl.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -3939,6 +4064,31 @@
               <FileName>am_hwconf_fm175xx.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_fm175xx.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_ltr_553als.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_ltr_553als.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_bmg160.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_bmg160.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_mmc5883ma.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_mmc5883ma.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_lsm6dsl.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_lsm6dsl.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_microport_sc16is740.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_microport_sc16is740.c</FilePath>
             </File>
           </Files>
         </Group>
