please read Version记录.txt

--- a/board/am217_core/project_example/projects_keil5/example_am217_core.uvprojx
+++ b/board/am217_core/project_example/projects_keil5/example_am217_core.uvprojx
@@ -2086,6 +2086,11 @@
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hts221.c</FilePath>
             </File>
+            <File>
+              <FileName>am_hwconf_microport_is25xx_flash.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_microport_is25xx_flash.c</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
